styles.css
body{
    background: #d4d4d4;
    font-family: "Source Sans 3", serif;
    font-size: 16px;
    color: #434343;
}
h1{
    text-align: center;
    margin: 10px;
    font-family: "Source Sans 3", serif;
    color: #434343;
}
h2{
    text-align: center;
    color: #434343;
    margin: 10px;
}
h2#suncoast{
    color: #72d1d4;
    margin-top: 30px;
}
h2.part-num-disp{
    color: #f7b500;
    border: 2px solid #f7b500;
    margin: 20px 40px;
    padding: 10px;
}
h3{
    color: #434343;
    margin: 20px auto auto auto;
}
#hpu-div h3{
    text-align: center;
}
h4{
    text-align: center;
    color: #f7b500;
}
p{
    text-align: center;
}
ul{
    margin: 5px auto;
}
#container{
    display: flex;
    flex-direction: column;
    background: white;
    max-width: 430px;
    margin: 20px auto;
    padding: 20px;
    border: none;
    border-radius: 5px;
    box-shadow: 2px 2px #c2c0c0;
}
.page-div{
    background: white;
    margin: 10px;
    padding: 10px;
}

/* FORM STYLES */
form{
    margin: 10px;
    padding: 10px;
    display: block;
    font-family: "Source Sans 3", serif;
    color: #434343;
}
form#component-form{
    text-align: center;
}
form#hpu-sys-params-form{
    text-align: right;
}
form#hpu-manifold-options-form{
    display: none;
    text-align: right;
}
form#hpu-valve-options-form{
    display: none;
    text-align: right;
}
form#email-form{
    text-align: right;
    margin: 10px 20px;
}

/* FORM INPUT STYLES */
input{
    display: inline-block;
    width: 180px;
    margin: 10px auto;
    padding: 10px;
    font-family: "Source Sans 3", serif;
    color: #434343;
}
select{
    display: inline-block;
    width: 180px;
    margin: 10px auto;
    padding: 10px;
    font-family: "Source Sans 3", serif;
    color: #434343;
}
::placeholder {
    font-style: italic;
}
label{
    display: inline-block;
    font-family: "Source Sans 3", serif;
    color: #434343;
}

/* BUTTON STYLES */
.button{
    display: block;
    width: 220px;
    margin: 10px auto;
    padding: 10px;
    font-family: "Source Sans 3", serif;
    border: none;
    background-color: #72d1d4;
    border-radius: 5px;
}
.button:hover{
    background-color: #67bfc2;
    cursor: pointer;
}
button.gray{
    background-color: #d4d4d4;
}
.button.gray:hover{
    background-color: #c2c0c0;
    cursor: pointer;
}
.edit{
    width: 150px;
    margin: 5px auto;
    padding: 5px;
    background-color: #d4d4d4;
    font-size: 12px;
}

/* DIV STYLES */
#component-div{
    display: block;
}
#hpu-div{
    display: none;
}
#msp-div{
    display: none;
}
#hmi-div{
    display: none;
}
#part-num-div{
    display: none;
}
#edit-div{
    display: none;
}
#email-div{
    display: none;
}
#email-conf-div{
    display: none;
}

/* PART NUM DROPDOWN STYLES */
.dropdown .trigger{
    border-bottom: 1px solid #ddd;
    padding: 10px;
    position: relative;
    cursor: pointer;
}
.dropdown .trigger::after{
    content: ">";
    display: inline-block;
    position: absolute;
    right: 15px;
    transform: rotate(90deg) scale(0.5, 1);
    font-weight: bold;
    transition: transform 0.3s;
}
.dropdown .trigger.active::after{
    transform: rotate(-90deg) scale(0.5, 1);
}
.dropdown .content{
    display: none;
}
.dropdown .content.active{
    display: block;
}

/* VALVE POPUP STYLES */
.valve-popup-wrapper{
    display: none;
    background: rgba(0,0,0,0.5);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
.valve-popup-div{
    text-align: center;
    width: 100%;
    max-width: 700px;
    margin: 120px auto;
    padding: 20px;
    background: white;
    position: relative;
    border: none;
    border-radius: 5px;
}
.valve-popup-div h2{
    color: #72d1d4;
}
.valve-popup-close{
    position: absolute;
    font-size: 20px;
    top: 5px;
    right: 15px;
    cursor: pointer;
}
#valve-settings-div{
    display: flex;
    justify-content: space-around;
}
#valve-settings-div div{
    width: 200px;
    margin: 10px;
    padding: 10px;
}
#valve-popup-form select{
    width: 160px;
}
#valve-dropdowns-div{
    display: flex;
    justify-content: space-around;
}
#valve-dropdowns-div select{
    width: 160px;
    margin: 10px;
    padding: 10px;
}
#valve-popup-content{
    text-align: left;
}

/* POPUP TABLE STYLES */
.table-wrapper{
    display: none;
    background: rgba(0,0,0,0.5);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
}
.table-div{
    text-align: center;
    width: 100%;
    max-width: 800px;
    margin: 150px auto;
    padding: 20px;
    background: white;
    position: relative;
    border: none;
    border-radius: 5px;
}
.table-close{
    position: absolute;
    font-size: 20px;
    top: 5px;
    right: 15px;
    cursor: pointer;
}
table {
    table-layout: fixed;
    width: 100%;
    border-collapse: collapse;
    background-color: #d4d4d4;
  }
th,
td {
padding: 5px;
text-align: center;
}
tbody tr:nth-child(odd) {
background-color: white;

}
tbody tr:nth-child(even) {
background-color: #efefef;
}
tbody tr:hover{
background-color: #72d1d4;
cursor: pointer;
}

/* ERROR POPUP STYLES */
.error-popup-wrapper{
    display: none;
    background: rgba(0,0,0,0.5);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
.error-popup-div{
    text-align: center;
    width: 100%;
    max-width: 400px;
    margin: 120px auto;
    padding: 20px;
    background: white;
    position: relative;
    border: none;
    border-radius: 5px;
}
.error-popup-div h2{
    color: #72d1d4;
}
.error-popup-close{
    position: absolute;
    font-size: 20px;
    top: 5px;
    right: 15px;
    cursor: pointer;
}

